# ddos-protection-task-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md
ddos-protection-task/: Cargo.toml
ddos-protection-task-common/: Cargo.toml
ddos-protection-task-common/src/: lib.rs
ddos-protection-task-ebpf/: Cargo.toml
ddos-protection-task-ebpf/src/: main.rs
ddos-protection-task/src/: engine.rs  hashcash.rs  lib.rs  main.rs
ddos-protection-task/src/challenge/: client.rs  error.rs  helper.rs  mod.rs  server.rs
ddos-protection-task/src/engine/: error.rs  mod.rs
ddos-protection-task/src/resolver/: error.rs  mod.rs
docker/client/: Dockerfile
docker/server/: Dockerfile
xtask/src/: build_ebpf.rs  run.rs
