[package]
name = "ddos-protection-task"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
ddos-protection-task-common = { path = "../ddos-protection-task-common", features = ["user"] }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "io-util"] }
bytes = "1.4.0"
byteorder = "1.4.3"
thiserror = "1.0.38"
dashmap = "5.4.0"
digest = "0.10.6"
rand = "0.8.5"
sha2 = "0.10.6"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
